# lecture-mgr

./: Cargo.toml  flake.nix
.config/: default_config.toml  default_lecture.toml
completions/: lecture-mgr.zsh
src/: cli.rs  config.rs  lecture.rs  main.rs
