[package]
name = "lecture-mgr"
version = "0.3.3"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.2", features = ["unstable-dynamic"] }
color-eyre = "0.6.5"
config = "0.15.22"
fork = "0.7.0"
git2 = "0.20.4"
inquire = "0.9.4"
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
